--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ serde_yaml = "0.9"
 reqwest = { version = "0.12", features = ["json"] }
 crossterm = "0.27"
 notify = "6.0"
+anyhow = "1.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
