--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ reqwest = { version = "0.12", features = ["json"] }
 crossterm = "0.27"
 notify = "6.0"
 anyhow = "1.0"
+lazy_static = "1.4"
 
 [dev-dependencies]
 tokio-test = "0.4"
